# emotion_extraction

./: .gitignore  Readme.md  goal_detection.py  ml_classification.py  pickle_objects.py  pyproject.toml  robustness_test.py  run_change_detection_cluster_experiment.py  run_cluster_cpd.py  run_statistical_cpd.py  visual_pca_clustering.py  visualise_robustness_test.py  visualse_robustness_test.py
change_point_detection/: clustering.py  regression_test.py
data/: .gitignore  match.pkl  spectators.pkl
feature_generation/: feature_generation.py  features.py
matches/: match_report.py
preprocessing/: load_in_data.py
spectators/: spectator_class.py
ssa_factorisation/: factorise_ssa_matrices.py
statistical_testing/: regression_model_testing.py
streamlit_app/: app.py
streamlit_app/pages/: data_analysis.py  data_visualisation_app.py
