[tool.poetry]
name = "emotional_arousal_extraction"
version = "0.1.0"
description = ""
authors = ["Matthias Boeker <matthias.boeker@icloud.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.8.13"
pandas = "^1.4.4"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
streamlit = "^1.12.2"
scikit-learn = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"