[tool.poetry]
name = "emotional_arousal_extraction"
version = "0.1.0"
description = ""
authors = ["Matthias Boeker <matthias.boeker@icloud.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python =  ">=3.8.14,<3.9.7 || >3.9.7,<3.12"
pandas = "^1.4.4"
numpy = "^1.23.2"
matplotlib = "^3.5.3"
scikit-learn = "^1.1.2"
streamlit = "^1.12.2"
seaborn = "^0.12.0"
statsmodels = "^0.13.2"
llvmlite = "^0.39.1"
pyts = "^0.12.0"
scipy = "1.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"